Ruby Sanctum Patch

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 PATCHS:
 
-WinterGrasp - The Wintergrasp Patchs has been done by TCRC and adapted to the latest review of TrinityCore by Jhudas of WoWRun.com
+WinterGrasp - The Wintergrasp Patch has been done by TCRC and adapted to the latest review of TrinityCore by Jhudas of WoWRun.com
+
+RubySanctum - The RubySanctum Patch has been done by TCRC and adapted to the latest review of TrinityCore by Jhudas of WoWRun.com
